cluster/homelab/apps/autobrr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: autobrr
    namespace: autobrr
spec:
    template:
        spec:
            containers:
                -   name: autobrr
                    volumeMounts:
                        -   name: media-volume-nfs
                            mountPath: /media
            restartPolicy: Always
            volumes:
                -   name: media-volume-nfs
                    persistentVolumeClaim:
                        claimName: media-volume-nfs
